<resources>
    <string name="app_name">Moove Tv</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="show">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="change_your_country">Change your Country</string>
    <string name="selected_country">Selected Country</string>
    <string name="selected_state">Selected State</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="communicate">Communicate</string>
    <string name="location">Location</string>
    <string name="state">State</string>
    <string name="list_of_areas">List of Areas</string>
    <string name="name_of_business_or_company">Name of Business or Company</string>
    <string name="address_of_business_or_company">Address of Business or Company</string>
    <string name="location_on_map">Location on Map</string>
    <string name="call_or_whatsapp_no">Call or Whatsapp</string>
    <string name="image_of_comapany_or_business">Image of Company or Business</string>


    <string name="select_a_category">Please Select a Category</string>
    <string name="eatries">Eatries</string>
    <string name="event_centres">Event Centres</string>
    <string name="banks">Banks</string>
    <string name="mall">Mall</string>
    <string name="cinemas">Cinemas</string>
    <string name="gas_station">Gas Station</string>
    <string name="bet_centres">Bet Centres</string>
    <string name="technology">Technology</string>
    <string name="clothes_and_body_accessories">Clothes and Boody Accessories</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_feed">Feeds</string>
    <string name="title_live">Live</string>
    <string name="title_kids">Kids</string>
    <string name="title_more">More</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main4">Main4Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="details_movie_vote_average_label">details_movie_vote_average_label</string>


    <string name="detail_movie_date_label">detail_movie_date_label</string>


    <string name="trailers">trailers</string>


    <string name="related_movies">related_movies</string>


    <string name="detail_movie_description_label">detail_movie_description_label</string>
    <string name="title_activity_login">Log in</string>

    <string name="title_activity_register">Register</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login_in">LOGIN</string>
    <string name="action_facebook_sign_in">CONTINUE WITH FACEBOOK</string>
    <string name="action_google_sign_in">CONTINUE WITH GOOGLE</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">REGISTER</string>
    <string name="action_back_to_login">&lt;Back to login</string>
    <string name="action_tell_us_your_age">Tell us your age to help us deliver appropriate contents to you</string>
    <string name="prompt_username">Username</string>


</resources>
