<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_view_comfy_black_24dp"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_live"
        android:icon="@drawable/ic_live_tv_black_24dp"
        android:title="@string/title_live" />

    <item
        android:id="@+id/navigation_kids"
        android:icon="@drawable/ic_pets_black_24dp"
        android:title="@string/title_kids" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/title_more" />

</menu>
