<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="156dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:src="@drawable/moove_tv_white2"
                app:srcCompat="@drawable/moove_tv_white2"
                />

                <AutoCompleteTextView
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:hint="@string/prompt_username"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:singleLine="true"
                    android:textAlignment="textStart"
                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"/>


                <AutoCompleteTextView
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:singleLine="true"
                    android:textAlignment="textStart"
                    android:drawableLeft="@drawable/ic_mail_outline_black_24dp"/>


            <LinearLayout
                android:id="@+id/yearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:orientation="horizontal"
                android:weightSum="7">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_access_time_black_24dp"/>


                <EditText
                    android:id="@+id/register_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:singleLine="true"
                    android:hint="YYYY"/>

                <EditText
                    android:id="@+id/register_month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:singleLine="true"
                    android:hint="MM"/>

                <EditText
                    android:id="@+id/register_day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:singleLine="true"
                    android:hint="DD"/>



            </LinearLayout>

            <TextView
                android:id="@+id/tellusmoreregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_tell_us_your_age"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:singleLine="true"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"/>

            <Button
                android:id="@+id/email_register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/action_register"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/button_border"/>

                <TextView
                    android:id="@+id/backToLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_back_to_login"
                    android:textColor="@color/white"
                    android:layout_marginTop="30dp"/>


            <RelativeLayout
                android:id="@+id/SubtitleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp">

                <View

                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="35dp"
                    android:layout_toLeftOf="@+id/texts"
                    android:background="@color/white" />


                <TextView
                    android:id="@+id/texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="OR"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="35dp"
                    android:layout_toRightOf="@+id/texts"
                    android:background="@color/white" />


            </RelativeLayout>

            <Button
                android:id="@+id/facebook_register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/action_facebook_sign_in"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@color/lightblue"/>

            <Button
                android:id="@+id/google_register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/action_google_sign_in"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@android:color/holo_red_light"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>